<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Guide"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp" />

        <TextView
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jieshao"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="How to use"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp" />
        <TextView
            android:paddingTop="16dp"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howtouse_detail"
            />
        <TextView
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howtouse_detail2"
            />
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide1"
            />
        <ImageView
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide2"
            />
        <TextView
            android:textSize="14dp"
            android:paddingTop="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howtouse_detail3"
            />
        <ImageView
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide3"
            />
        <TextView
            android:textSize="14dp"
            android:paddingTop="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howtouse_detail4"
            />
        <ImageView
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/guide4"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>