<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/srl_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="16dp"
    android:elevation="@dimen/cardview_default_elevation"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_cartextview"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/nav_profile"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/total_task" />
            <TextView
                android:id="@+id/tv_profile_totaltask"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="Left Points" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/total_desire" />
            <TextView
                android:id="@+id/tv_profile_totaldesire"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="Total Desire" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/left_points" />

            <cn.studyjams.s1.sj32.zhangqidi.view.RectangleView
                android:id="@+id/rectangle_profile_left"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_weight="7"
                android:padding="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/earn_points" />

            <cn.studyjams.s1.sj32.zhangqidi.view.RectangleView
                android:id="@+id/rectangle_profile_earn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_weight="7"
                android:padding="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/cost_points" />

            <cn.studyjams.s1.sj32.zhangqidi.view.RectangleView
                android:id="@+id/rectangle_profile_cost"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_weight="7"

                android:padding="@dimen/activity_horizontal_margin" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_cartextview2"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/profile_bottom"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
